<resources>
    <string name="app_name">Reminder</string>
    <string name="water_reminder">Water Reminder</string>
    <string name="weight_tracker">Weight Tracker</string>
    <string name="step_counter">Step Counter</string>
    <string-array name="data">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="sortByspinner">
        <item>Monthly</item>
        <item>Yearly</item>
        <item>Weekly</item>
    </string-array>

    <string-array name="chart_spinner">
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>


    <string-array name="sortByspinnerFilter">
        <item>Before Meal</item>
        <item>After Meal</item>

    </string-array>


    <string-array name="genderSpinnerList">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>

    <string name="general_set">General Settings</string>
    <string name="notification">Notification</string>
    <string name="reminder_tone">Reminder Tone</string>
    <string name="personal_in">Personal Information</string>
    <string name="reminder_schedule">Reminder Schedule</string>
    <string name="clear_data">Clear Data</string>
    <string name="update_data">Update Data</string>
    <string name="developer">Developer</string>
    <string name="feedback">Feedback</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="more_apps">More Apps</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="clear_all_data">Do you want to clear all data?</string>
    <string name="customize_cup">Customize your drinking cup</string>
    <string name="wakeup_time">Wakeup Time</string>
    <string name="continue_btn">Continue</string>
    <string name="weight_kg">    65 Kg     </string>

    <string-array name="hour_select">
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>


    </string-array>

    <string-array name="minute_select">

        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>


    </string-array>

    <string-array name="weight_select">


        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>60</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
        <item>100</item>
    </string-array>

    <string-array name="am_pm_select">
        <item>am</item>
        <item>pm</item>

    </string-array>

    <string name="how_was_hour_sleep">How was your sleep?</string>
    <string name="current">Current</string>
    <string name="privacy_text">Your privacy is paramount to us. We never share your personal information with any third parties.</string>
    <string name="details_quote">Let us know you better and speed up your results.</string>
    <string name="personal_data">Personal Data</string>
    <string name="gender">Gender</string>

    <string name="genderWaterTracker">Gender</string>

    //SHORTCUT_WEIGHT_TRACKER
    <string name="short_label_weightTracker">Weight T</string>
    <string name="long_label_weightTracker">Weight Tracker</string>
    <string name="disabled_message_weightTracker">This shortcut is disabled</string>

    //SHORTCUT_WATER_REMINDER
    <string name="short_label_waterReminder">Water R</string>
    <string name="long_label_waterReminder">Water Reminder</string>
    <string name="disabled_message_waterReminder">This shortcut is disabled</string>

    //SHORTCUT_SLEEP_TRACKER
    <string name="short_label_sleepTracker">Sleep T</string>
    <string name="long_label_sleepTracker">Sleep Tracker</string>
    <string name="disabled_message_sleepTracker">This shortcut is disabled</string>

    //SHORTCUT_PEDOMETER
    <string name="short_label_pedometer">Pedo</string>
    <string name="long_label_pedometer">Pedometer</string>
    <string name="disabled_message_pedometer">This shortcut is disabled</string>

    //SHORTCUT_BLOOD_SUGAR_TRACKER
    <string name="short_label_bloodSugarTracker">Blood Sugar T</string>
    <string name="long_label_bloodSugarTracker">Blood Sugar Tracker</string>
    <string name="disabled_message_bloodSugarTracker">This shortcut is disabled</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Start to measure your weight every day and analyze your dynamic.</string>

</resources>