<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".weightTracker.SettingsWeightTracker">

    <RelativeLayout
        android:id="@+id/general_relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >

        <TextView
            android:id="@+id/general_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10sp"
            android:fontFamily="@font/poppins_normal"
            android:gravity="top"
            android:text="@string/general_set"
            android:textColor="#172436"
            android:textSize="20sp"

            />

        <LinearLayout
            android:id="@+id/general_LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/general_set"
            android:layout_margin="10dp"
            android:background="@drawable/settings_grey_background"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/notiTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_margin="10dp"
                    android:layout_toStartOf="@+id/switch_notification_WT"
                    android:drawablePadding="8sp"
                    android:fontFamily="@font/poppins_normal"
                    android:text="@string/notification"
                    android:textColor="@color/settingsSubTextColor"
                    app:drawableStartCompat="@drawable/ic_noti" />

                <Switch
                    android:id="@+id/switch_notification_WT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:theme="@style/switchTheme"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.5sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#AFAFAF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawablePadding="8sp"
                android:fontFamily="@font/poppins_normal"
                android:text="@string/reminder_schedule"
                android:textColor="@color/settingsSubTextColor"
                app:drawableEndCompat="@drawable/ic_arrow_forward_more"
                app:drawableStartCompat="@drawable/ic_notification" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.5sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#AFAFAF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawablePadding="8sp"
                android:fontFamily="@font/poppins_normal"
                android:text="@string/reminder_tone"
                android:textColor="@color/settingsSubTextColor"
                app:drawableEndCompat="@drawable/ic_arrow_forward_more"
                app:drawableStartCompat="@drawable/ic_tone" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/personal_in_Relative_Layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/general_relativeLayout"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/personal_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10sp"
            android:fontFamily="@font/poppins_normal"
            android:text="@string/personal_in"
            android:textColor="#172436"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/personal_in_LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/personal_in"
            android:layout_margin="10dp"
            android:background="@drawable/settings_grey_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/clear_user_data_wt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawablePadding="8sp"
                android:fontFamily="@font/poppins_normal"
                android:text="@string/clear_data"
                android:textColor="@color/settingsSubTextColor"
                app:drawableStartCompat="@drawable/ic_clear_data" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.5sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#AFAFAF" />

            <TextView
                android:id="@+id/update_user_data_wt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawablePadding="8sp"
                android:fontFamily="@font/poppins_normal"
                android:text="@string/update_data"
                android:textColor="@color/settingsSubTextColor"
                app:drawableEndCompat="@drawable/ic_arrow_forward_more"
                app:drawableStartCompat="@drawable/ic_update_data" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/developer_Relative_Layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/personal_in_Relative_Layout"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10sp"
            android:fontFamily="@font/poppins_normal"
            android:text="@string/developer"
            android:textColor="#172436"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/developer_LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/developer"
            android:layout_margin="10dp"
            android:background="@drawable/settings_grey_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawablePadding="8sp"
                android:fontFamily="@font/poppins_normal"
                android:text="@string/feedback"
                android:textColor="@color/settingsSubTextColor"
                app:drawableEndCompat="@drawable/ic_arrow_forward_more"
                app:drawableStartCompat="@drawable/ic_feedback" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.5sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#AFAFAF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawablePadding="8sp"
                android:fontFamily="@font/poppins_normal"
                android:text="@string/rate_app"
                android:textColor="@color/settingsSubTextColor"
                app:drawableEndCompat="@drawable/ic_arrow_forward_more"
                app:drawableStartCompat="@drawable/ic_rating" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.5sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#AFAFAF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawablePadding="8sp"
                android:fontFamily="@font/poppins_normal"
                android:text="@string/share_app"
                android:textColor="@color/settingsSubTextColor"
                app:drawableEndCompat="@drawable/ic_arrow_forward_more"
                app:drawableStartCompat="@drawable/ic_share_app" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.5sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#AFAFAF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawablePadding="8sp"
                android:fontFamily="@font/poppins_normal"
                android:text="@string/more_apps"
                android:textColor="@color/settingsSubTextColor"
                app:drawableEndCompat="@drawable/ic_arrow_forward_more"
                app:drawableStartCompat="@drawable/ic_more_apps" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>